tests/core/interpreter/test_package_file_visibility_intersection_data/golden/test_calling_twice_in_one_package_is_rejected.golden.txt
# This file is @generated, regenerate by re-running test with `-- --env BUCK2_UPDATE_GOLDEN=1` appended to the test command

[<TIMESTAMP>] Starting new buck2 daemon...
[<TIMESTAMP>] Connected to new buck2 daemon.
[<TIMESTAMP>] Buck UI: https://www.internalfb.com/buck2/<UUID>
Command failed: 
evaluating Starlark PACKAGE file `root//at_most_once`

Caused by:
    error: `enforce_visibility_intersection()` function can be used at most once per `PACKAGE` file
     --> at_most_once/PACKAGE:4:1
      |
    4 | enforce_visibility_intersection()
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      |
    Traceback (most recent call last):
      * at_most_once/PACKAGE:4, in <module>
          enforce_visibility_intersection()
    
